--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./css/init.css">
 
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/loadingpage_style.css">
@@ -12,7 +13,7 @@
 	<link rel="stylesheet" href="./css/chs_style.css">
 	<link rel="stylesheet" href="./css/aboutpage_style.css">
 
-	<title>Aestonia: First Contact - Demo</title>
+	<title>East-stonians - Demo</title>
 </head>
 <body>
 	<!-- <div id="debug-pages"></div> -->
