--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/init.css">
+	<link rel="stylesheet" href="./css/mainmenu_style.css">
 
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/loadingpage_style.css">
