Transition into color in narration

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 	<link rel="stylesheet" href="./css/loadingpage_style.css">
 
 	<link rel="stylesheet" href="./css/buttons.css">
+
 	<link rel="stylesheet" href="./css/csnarr_style.css">
+	<link rel="stylesheet" href="./css/narrative_specific/narr_0.css">
+
 	<link rel="stylesheet" href="./css/chs_style.css">
 	<link rel="stylesheet" href="./css/aboutpage_style.css">
 
