--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/init.css">
-	<link rel="stylesheet" href="./css/mainmenu_style.css">
-
 	<link rel="stylesheet" href="./css/main.css">
+
 	<link rel="stylesheet" href="./css/loadingpage_style.css">
 
 	<link rel="stylesheet" href="./css/buttons.css">
+
+	<link rel="stylesheet" href="./css/mainmenu_style.css">
 
 	<link rel="stylesheet" href="./css/csnarr_style.css">
 	<link rel="stylesheet" href="./css/narrative_specific/narr_0.css">
 
 	<link rel="stylesheet" href="./css/chs_style.css">
+
+	<link rel="stylesheet" href="./css/end_screens.css">
+
 	<link rel="stylesheet" href="./css/aboutpage_style.css">
 
 	<title>East-stonians - Demo</title>
