Redo ty styling

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="./css/chs_style.css">
 
 	<link rel="stylesheet" href="./css/end_screens.css">
+	<link rel="stylesheet" href="./css/ty_style.css">
 
 	<link rel="stylesheet" href="./css/aboutpage_style.css">
 
