Move init game to JavaScript

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 	<div id="meta-data"></div>
 </body>
 
-<script src="./pages/loadingPage.js"></script>
+<script src="./scripts/game.js" type="module"></script>
+
+<!-- <script src="./pages/loadingPage.js"></script>
 <script src="./pages/mainMenu.js"></script>
 
 <script src="./pages/aboutPage.js"></script>
@@ -48,18 +50,18 @@
 
 
 <script src="./scripts/endScript.js"></script>
-<script src="./pages/ty_msg.js"></script>
+<script src="./pages/ty_msg.js"></script> -->
 
 <script>
-	const mainContent = document.getElementById("main-content");
-	loadingPage()
-	setTimeout(() => {
-		mainMenu();
-  	}, 2000);
+	// const mainContent = document.getElementById("main-content");
+	// loadingPage()
+	// setTimeout(() => {
+	// 	mainMenu();
+  	// }, 2000);
 
-	let end0Done = false;
-	let end1Done = false;
-	let end2Done = false;
+	// let end0Done = false;
+	// let end1Done = false;
+	// let end2Done = false;
   
 </script>
 
