--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 	<!-- <div id="debug-pages"></div> -->
 	<div id="main-content"></div>
 	<div id="meta-data"></div>
+	<div class="author-area">
+		east-stonians v1.0d by "Kriimsilmlane" paraIncog
+	</div>
 </body>
 
 <script src="./scripts/game.js" type="module"></script>
