--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/init.css">
+	<link rel="stylesheet" href="./css/background.css">
 	<link rel="stylesheet" href="./css/main.css">
 
 	<link rel="stylesheet" href="./css/loadingpage_style.css">
@@ -24,12 +26,13 @@
 
 	<title>East-stonians - Demo</title>
 </head>
+
 <body>
 	<!-- <div id="debug-pages"></div> -->
 	<div id="main-content"></div>
 	<div id="meta-data"></div>
 	<div class="author-area">
-		east-stonians v1.0d by "Kriimsilmlane" paraIncog
+		east-stonians v0.3d by "Kriimsilmlane" paraIncog
 	</div>
 </body>
 
