--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 	<div id="main-content"></div>
 	<div id="meta-data"></div>
 	<div class="author-area">
-		east-stonians v0.5d by "Kriimsilmlane" paraIncog
+		east-stonians v0.5.1d by "Kriimsilmlane" paraIncog
 	</div>
 </body>
 
 <script src="./scripts/game.js" type="module"></script>
+<script src="./scripts/sounds.js" type="module"></script>
 
 </html>
