--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
 <body>
 	<div id="main-content"></div>
 	<div id="meta-data"></div>
+	<div id="options">
+		<div id="sound-toggle">Sound: On</div>
+		<div>Pixelization Toggle</div>
+	</div>
 	<div class="author-area">
-		east-stonians v0.6.1d by "Kriimsilmlane" paraIncog
+		east-stonians v0.6.2d by "Kriimsilmlane" paraIncog
 	</div>
 </body>
 
