--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="./css/loadingpage_style.css">
 
 	<link rel="stylesheet" href="./css/buttons.css">
+	<link rel="stylesheet" href="./css/options.css">
 
 	<link rel="stylesheet" href="./css/mainmenu_style.css">
 
@@ -29,12 +30,12 @@
 <body>
 	<div id="main-content"></div>
 	<div id="meta-data"></div>
-	<div id="options">
-		<div id="sound-toggle">Sound: On</div>
-		<div>Pixelization Toggle</div>
+	<div class="options">
+		<div id="sound-toggle" class="clickable">Sound: On</div>
+		<!-- <div id="pixelized-toggle" class="clickable">Pixelized: On</div> -->
 	</div>
 	<div class="author-area">
-		east-stonians v0.6.2d by "Kriimsilmlane" paraIncog
+		east-stonians v0.6.3d by "Kriimsilmlane" paraIncog
 	</div>
 </body>
 
