--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 	<div id="main-content"></div>
 	<div id="meta-data"></div>
 	<div class="options">
-		<div id="sound-toggle" class="clickable">Sound: On</div>
+		<div id="sound-toggle" class="clickable">
+			<img id="sound-icon" src="./img/ui/buttons/sound_on.png" alt="Sound On">
+		</div>
 		<!-- <div id="pixelized-toggle" class="clickable">Pixelized: On</div> -->
 	</div>
 	<div class="author-area">
-		east-stonians v0.6.3d by "Kriimsilmlane" paraIncog
+		east-stonians v0.6.4d by "Kriimsilmlane" paraIncog
 	</div>
 </body>
 
