--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
 <body>
 	<div id="main-content"></div>
 	<div id="meta-data"></div>
-	<div class="options">
-		<div id="sound-toggle" class="clickable">
-			<img id="sound-icon" src="./img/ui/buttons/sound_on.png" alt="Sound On">
+	<footer>
+		<div class="options">
+			<div id="sound-toggle" class="clickable">
+				<img id="sound-icon" src="./img/ui/buttons/sound_on.png" alt="Sound On">
+			</div>
+			<!-- <div id="pixelized-toggle" class="clickable">Pixelized: On</div> -->
 		</div>
-		<!-- <div id="pixelized-toggle" class="clickable">Pixelized: On</div> -->
-	</div>
-	<div class="author-area">
-		east-stonians v0.6.4d by "Kriimsilmlane" paraIncog
-	</div>
+		<div class="author-area">
+			east-stonians v0.6.5d by "Kriimsilmlane" paraIncog
+		</div>
+	</footer>
 </body>
 
 <script src="./scripts/game.js" type="module"></script>
